# Geometric_Modeling_ANDRIAMASINORO

./: README.md
TP1/: CMakeLists.txt  README.md  helperFunctions.h  main.cpp  myMesh.cpp  myVertex.h
TP1/shaders/: light.frag.glsl  light.vert.glsl
